                                                         -*- coding: utf-8 -*-
  Changes with Apache Traffic Server 3.3.3


  *) [TS-1662] Remove remaining use of register storage class.

  *) [TS-846] Eliminate proxy.config.remap.use_remap_processor.

  *) [TS-1802] Remove proxy.config.net.accept_throttle.

  *) [TS-1752] Change type of "len" in jtest to off_t, for better
  compiler compliance.

  *) [TS-1826] Remove DumpStats/http_dump dead code.



  Changes with Apache Traffic Server 3.3.2


  *) [TS-621] Allow caching of empty docs (currently only if a header
   Content-Length: 0 is in the response). New config option is named
   proxy.config.http.cache.allow_empty_doc, and is disabled by default.

  *) [TS-1778] Remove vestigal extensions.config support

  *) [TS-1806] bogus buffer sizing in CfgContextUtils.cc

  *) [TS-1805] Fix stats ExpressionEval in stats xml.
   Author: Yunkai Zhang

  *) [TS-1783] Eliminate the wpad.dat configuration option (it's unused).

  *) [TS-1787] Eliminate old ink_time code (was probably only used by the
   now obsolete Web UI). This fixes compiling with gcc 4.8 as well.

  *) [TS-1067] Remove unused config (and code) for bandwidth management.

  *) [TS-1736] Fatal() terminates process without a backtrace
    Author: Yunkai Zhang <yunkai.me@gmail.com>

  *) [TS-1791] remove m_mutex acquire&release to avoid deadlock in
   ~LogBufferList(). Author: Gang Li <quehan@taobao.com>.

  *) [TS-1713] SRV support refine. Now the srv option is able to enable, with
   no crash. Be care, the hostdb.storage_size or ostdb.size need check.

  *) [TS-1632] In addition to the changes from TS-1674, also add
   some safety measures assuring that the stats sums don't go
   negative. Author: Yakov Kopel.

  *) [TS-1789] Script to compare RecordsConfig.cc default values with
   records.config.default.in: Author: Mark Harrison.

  *) [TS-1631] Mgmt API to clear stats does not actually clear it.
   Author: Yakov Kopel.
